--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
         <div id="result">
             <p>Time: <span id="time">0</span> seconds</p>
             <p>Speed: <span id="speed">0</span> WPM</p>
+            <p>Words Typed: <span id="wordCount">0</span></p>
+            <p>Accuracy: <span id="accuracy">100</span>%</p>
         </div>
         <button id="start">Start Test</button>
         <button id="stop" disabled>Stop Test</button>
+        <button id="restart" disabled>Restart Test</button>
     </div>
     <script src="script.js"></script>
 </body>
