--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <button id="start">Start Test</button>
         <button id="stop" disabled>Stop Test</button>
         <button id="restart" disabled>Restart Test</button>
+        <div>
+            <label for="customSentence">Enter your own sentence:</label>
+            <input type="text" id="customSentence" placeholder="Type your sentence here...">
+        </div>
+        
     </div>
     <script src="script.js"></script>
 </body>
